Strictly filter subject averages by class name and display individual subject breakdown per student